application/test/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapp
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "myapp.servicemesh.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "myapp.servicemesh.io"
  gateways:
  - myapp
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /register
    route:
    - destination:
        host: register
        port:
          number: 80
---
